--- a/resume/assets/css/styles.css
+++ b/resume/assets/css/styles.css
@@ -78,6 +78,7 @@ body.scale-cv{
   --normal-font-size: .813rem;
   --small-font-size: .75rem;
   --smaller-font-size: .688rem;
+
 }
 
 /*========== Generate PDF button ==========*/
@@ -117,6 +118,7 @@ body.scale-cv{
 .scale-cv .resume__right{
   padding: 0 1rem;
   overflow: hidden;
+  height: 11.7in;
 }
 
 .scale-cv .home__container{
@@ -615,7 +617,8 @@ img{
   }
 
   .references__container{
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, max-content);
+    column-gap: 3.5rem;
   }
 
   .languages__content{
